<resources>
    <string name="app_name">醉食汇</string>
    <string name="is_located">正在定位</string>
    <string name="tab_homepage_text">首页</string>
    <string name="tab_classify_text">分类</string>
    <string name="tab_shopping_cart_text">购物车</string>
    <string name="tab_my_text">我的</string>
    <string name="edit">编辑</string>
    <string name="name_edit_hint">亲点我登录</string>
    <string name="consignee">寄送：</string>
    <string name="no_shipping_address_hint">亲没有选择收货地址~\n点击编辑地址</string>
    <string name="shopping_cart_empty_hint">购物车空空如也哦~</string>
    <string name="go_homepage">去首页逛逛</string>
    <string name="click_edit">点击编辑</string>
    <string name="my_order">我的订单</string>
    <string name="see_all">查看全部</string>
    <string name="all">全部</string>
    <string name="stay_pay">待付款</string>
    <string name="stay_receiving">待收货</string>
    <string name="completed">已完成</string>
    <string name="refund">已取消</string>
    <string name="kefu">客服电话</string>
    <string name="about_us">关于我们</string>
    <string name="product">产品列表</string>
    <string name="address_management">地址管理</string>
    <string name="collection_product">收藏宝贝</string>
    <string name="login_yz">登录验证</string>
    <string name="login_phone_hint">请输入11位有效号码</string>
    <string name="login_yzm_hint">请输入验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="login">登录</string>
    <string name="login_hint1">点击-登录，即表示你同意</string>
    <string name="login_hint2">《法律声明及隐私政策》</string>
    <string name="search_hint">输入您所需要的产品</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_search_history">清空搜索历史</string>
    <string name="no_search_results_hint">抱歉，暂时没有找到相关商品\n来看看大家都在买什么</string>
    <string name="delete">删除</string>
    <string name="go_settlement">去结算</string>
    <string name="subtract">—</string>
    <string name="plus">＋</string>
    <string name="totals">合计</string>
    <string name="total">合计：</string>
    <string name="confirm_order">确认订单</string>
    <string name="alipay">支付宝</string>
    <string name="cash_on_delivery">货到付款</string>
    <string name="take_their">到店自提</string>
    <string name="total_price">商品金额</string>
    <string name="freight">运费</string>
    <string name="cope_with">应付</string>
    <string name="catalogue">商品列表</string>
    <string name="pay_price">应付金额：</string>
    <string name="go_pay">去付款</string>
    <string name="personal_center">个人中心</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称：</string>
    <string name="nickname_edit_hint">网友(点我修改昵称)</string>
    <string name="phone_num">手机号码：</string>
    <string name="login_out">退出当前账号</string>
    <string name="update_nickname">修改用户昵称</string>
    <string name="confirm">确认</string>
    <string name="determine">确定</string>
    <string name="receiving_address_management">收货地址管理</string>
    <string name="add_receiving_address">添加收货地址</string>
    <string name="receiving">收货人：</string>
    <string name="receiving_address">收货地址：</string>
    <string name="detail_address">详细地址：</string>
    <string name="address_search_hint">小区/写字楼等</string>
    <string name="search_address_list">当前地址列表</string>
    <string name="address">地址</string>
    <string name="positioning">地图定位</string>
    <string name="address_empty_hint">点击下方新增按钮吧</string>
    <string name="address_empty_hint1">点击下方地址管理按钮吧</string>
    <string name="classify_list">分类</string>
    <string name="select_address">选择收货地址</string>
    <string name="product_details">商品详情</string>
    <string name="message_prompt">消息提示</string>
    <string name="againBuy">再次购买</string>
    <string name="order_details">订单详情</string>
    <string name="cancel_order_hint">如有取消订单，请拨打门店客服电话</string>
    <string name="empty">清空</string>
    <string name="product_recommendation">您可能对以下产品感兴趣</string>
    <string name="send_price_hint">满58元起送</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="guide_page">引导页</string>
    <string name="collect_baby_empty_hint">亲，还没有内容哦！</string>
    <string name="positioning_location">定位当前位置</string>
    <string name="select_store">选择店面</string>
    <string name="network_anomaly">亲，您的网络状况不太好哦！</string>
    <string name="microphone_hint">按住说出你要的商品</string>
    <string name="remarks_hint">暂无备注</string>
    <string name="remarks">备注</string>
    <string name="xieyi">用户协议</string>
    <string name="about_us_hint">醉食汇，您身边的便利网上超市。一键下单、快速送达！ 我们的产品：新鲜水果、南北干货、五谷杂粮、饼干蛋糕、坚果炒货、牛奶乳品、饮料酒水、酱菜调味、方便速食、美味糖果、花茶冲饮等。 我们的服务：产品新鲜、质量保证、品质稳定、服务优质、快速送达。 以质量求生存、以服务求发展！ 支持送货上门、到店自取、 支持在线支付、货到付款、</string>
    <string name="about_us_text">Copyright2015-2016\n上海青云信息科技有限公司</string>
    <string name="call_phone">联系商家</string>
    <item name="tag_image_url" type="id"></item>
</resources>
