<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <tsingcloud.android.core.widgets.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/updateAvatar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/head_portrait"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/enterAvatar"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_avatar_small_icon" />

                <ImageView
                    android:id="@+id/enterAvatar"
                    android:layout_width="44dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/all_order_enter_icon" />

            </RelativeLayout>

            <include layout="@layout/widget_line" />

            <RelativeLayout
                android:id="@+id/updateNickName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/nickname"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/enterNickname"
                    android:gravity="center_vertical"
                    android:text="@string/nickname_edit_hint"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:id="@+id/enterNickname"
                    android:layout_width="44dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/all_order_enter_icon" />

            </RelativeLayout>

            <include layout="@layout/widget_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/phone_num"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

            <include layout="@layout/widget_line" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/loginOut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>