<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >


    <tsingcloud.android.core.widgets.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/title_height"/>


    <include layout="@layout/widget_line" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/text_size_normal" />
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="315dp"
                android:paddingTop="15dp"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="@dimen/margin_general"
                android:paddingRight="@dimen/margin_general"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_dark"
                android:text="@string/about_us_hint"
                android:background="@color/white"/>
           <TextView 
               android:layout_width="wrap_content"
                android:lineSpacingExtra="5dp"
                android:layout_marginBottom="35dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_dark"
                android:text="@string/about_us_text"
               android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>