<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/back_white_icon" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/back"
            android:background="@drawable/search_bg"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="13dp"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:paddingLeft="13dp"
            android:singleLine="true"
            android:textColor="@color/text_color_grey"
            android:textColorHint="@color/text_color_grey"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/line_bg"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/hot_search_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hot_search"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:orientation="vertical"
                android:padding="10dp">

                <com.custom.vg.list.CustomListView
                    android:id="@+id/hotSearchListView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/line_bg"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/history_search_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/history_search"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <ListView
                android:id="@+id/historySearchListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/line_bg"
                android:dividerHeight="@dimen/line_height"
                android:listSelector="#00000000"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/clearSearchHistory"
                android:layout_width="150dp"
                android:layout_height="33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/go_homepage_bg"
                android:gravity="center"
                android:text="@string/clear_search_history"
                android:visibility="gone"
                android:textColor="@color/orange"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>